--- a/app/templates/create-timeline.html
+++ b/app/templates/create-timeline.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <div id="formContent">
         <!-- Tabs Titles -->
-        <h2 class="active">Create an event</h2>
+        <h2>Create an event</h2>
 
         <!-- Create event Form -->
         {% block content %}
