--- a/app/templates/create-timeline.html
+++ b/app/templates/create-timeline.html
@@ -21,7 +21,7 @@
             {{ form.eventname.label }}<br />
             {{ form.eventname(size=32) }}
           </p>
-          <p>{{ form.submit() }}</p>
+          <button>{{ form.submit() }}</button>
         </form>
         {% endblock%}
 
