--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -54,7 +54,7 @@
       <button
         type="submit"
         onclick="document.location.href=this.getAttribute('href');"
-        href="index.html"
+        href="/"
       >
         Return to menu
       </button>
