--- a/app/templates/create-timeline.html
+++ b/app/templates/create-timeline.html
@@ -34,7 +34,7 @@
 
         <!-- Footer -->
         <div id="formFooter">
-          <a href="index.html">Back to menu</a>
+          <a href="/">Back to menu</a>
         </div>
       </div>
     </div>
