--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -17,14 +17,22 @@ a {
   font-weight: 400;
 }
 
+h1,
 h2 {
   text-align: center;
-  font-size: 16px;
+  color: #cccccc;
   font-weight: 600;
   text-transform: uppercase;
   display: inline-block;
   margin: 40px 8px 10px 8px;
-  color: #cccccc;
+}
+
+h1 {
+  font-size: 25px;
+}
+
+h2 {
+  font-size: 16px;
 }
 
 .wrapper {
