--- a/app/templates/create-block.html
+++ b/app/templates/create-block.html
@@ -19,14 +19,26 @@
     <div class="wrapper">
       <div id="formContent">
         <!-- Tabs Titles -->
-        <h2>When are you busy?</h2>
+        <h2>When are you available?</h2>
         <!-- Create event Form -->
         {% block content %}
         <form action="" method="post">
           {{ form.csrf_token }}
           <p>
             <br />
-            {{ form.eventname(size=32) }}
+            {{ form.name(size=32) }}
+          </p>
+          <p>
+            <br />
+            {{ form.blockstart() }}
+          </p>
+          <p>
+            <br />
+            {{ form.blockend() }}
+          </p>
+          <p>
+            <br />
+            {{ form.recurring() }}
           </p>
           <button>{{ form.submit() }}</button>
         </form>
