--- a/app/templates/create-block.html
+++ b/app/templates/create-block.html
@@ -28,6 +28,18 @@
             <br />
             {{ form.name(size=32) }}
           </p>
+          <p>
+            <br />
+            {{ form.blockstart() }}
+          </p>
+          <p>
+            <br />
+            {{ form.blockend() }}
+          </p>
+          <p>
+            <br />
+            {{ form.recurring() }}
+          </p>
           <button>{{ form.submit() }}</button>
         </form>
         {% endblock%}
