--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -32,8 +32,11 @@
     </header>
     <div class="ganttChart"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../js/date.js"></script>
-    <script type="text/javascript" src="../js/jquery.ganttView.js"></script>
+    <script type="text/javascript" src="../static/js/date.js"></script>
+    <script
+      type="text/javascript"
+      src="../static/js/jquery.ganttView.js"
+    ></script>
     <script type="text/javascript" src="../json/data.js"></script>
     <script type="text/javascript">
       $(function () {
