--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,8 +41,8 @@
       <div id="formContent">
         <h2 style="color: grey; font-size: 50px">Welcome</h2>
         <br />
-        <h2 class="active">Create an event</h2>
-        <h2 class="active">Join an event</h2>
+        <h2>Create an event</h2>
+        <h2>Join an event</h2>
         <button
           type="submit"
           onclick="document.location.href=this.getAttribute('href');"
