--- a/app/templates/create-event.html
+++ b/app/templates/create-event.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
@@ -28,7 +29,7 @@
             Event name<br />
             {{ form.eventname(size=32) }}
           </p>
-          <button>{{ form.submit() }}</button>
+          {{ form.submit(class_="button") }}
         </form>
         {% endblock%}
 
