--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,7 +40,7 @@
   <body>
     <div class="wrapper">
       <div id="formContent">
-        <h2 style="color: grey; font-size: 50px">Welcome</h2>
+        <h2 style="color: #7dca5c; font-size: 50px">Welcome</h2>
         <br />
         <h2>Create an event</h2>
         <h2>Join an event</h2>
